❇️ JEKT-1367     - Dataset        - DS_JDE_01_F0101_ADT        - DS_JDE_01_F0101     - Pipeline        - JDE_01_MD_CUST
🔁 Modified
    - Pipeline
       - SAP_01_MD_CUST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1629,7 +1629,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-15 17:35:18'
-    modifiedAt: '2023-04-25 18:24:11'
+    modifiedAt: '2023-04-26 14:31:07'
     datasets:
       inputs:
       - datasets/DS_SAP_01_KNA1
@@ -1671,6 +1671,22 @@ pipelines:
       - datasets/DS_SAP_02_KNA1
       outputs:
       - datasets/MD_CUST
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_01_MD_CUST:
+    name: JDE_01_MD_CUST
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-26 13:16:10'
+    modifiedAt: '2023-04-26 13:42:28'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F0101
+      - datasets/DS_JDE_01_F0101_ADT
+      outputs: []
     subgraphs: []
     dependencies: {}
 datasets:
@@ -6317,6 +6333,36 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-19 22:10:57'
         modifiedAt: '2023-04-19 22:10:57'
+  datasets/DS_JDE_01_F0101:
+    name: DS_JDE_01_F0101
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-26 13:22:44'
+    modifiedAt: '2023-04-26 13:40:35'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-26 13:22:44'
+        modifiedAt: '2023-04-26 13:22:44'
+  datasets/DS_JDE_01_F0101_ADT:
+    name: DS_JDE_01_F0101_ADT
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-26 13:37:39'
+    modifiedAt: '2023-04-26 13:42:28'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-26 13:37:39'
+        modifiedAt: '2023-04-26 13:37:39'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
