JEKT-1421 ❇️ New     - Dataset        - DS_SAP_RSEG     - Pipeline        - sap_md_doc_itm_incm_invc_hm2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1589,6 +1589,21 @@ pipelines:
       - datasets/MD_PO_SCHED_LINE_DELV
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_RSEG:
+    name: sap_md_doc_itm_incm_invc_hm2
+    description: ''
+    author: jcacere7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-26 18:25:43'
+    modifiedAt: '2023-04-26 20:19:33'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_RSEG
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -6143,6 +6158,21 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-03-21 20:31:38'
         modifiedAt: '2023-03-21 20:31:38'
+  datasets/DS_SAP_RSEG:
+    name: DS_SAP_RSEG
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-04-26 18:39:08'
+    modifiedAt: '2023-04-26 18:45:03'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-04-26 18:39:08'
+        modifiedAt: '2023-04-26 18:39:08'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
