--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7248,6 +7248,31 @@ jobs:
     createdAt: '2023-04-03 13:50:02'
     modifiedAt: '2023-04-03 13:59:04'
     author: jcacere7@its.jnj.com
+  jobs/JOB_MD_DOC_ITM_INCM_INVC:
+    name: JOB_MD_DOC_ITM_INCM_INVC
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_RSEG
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-26 20:30:55'
+    modifiedAt: '2023-04-26 20:31:49'
+    author: jcacere7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
