JEKT-1508 - ❇️ New - Added HM2 Job and update the HMD Job     - Job        - HM2_PIPELINE_JOB
🔁 Modified
    - Job
       - JOB_MD_MATL_INV_HM2
       - HMD_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1156,23 +1156,6 @@ pipelines:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
-  pipelines/JDE_MD_SLS_ORDR_LINE_:
-    name: JDE_01_MD_SLS_ORDR_LINE_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR
-    description: ''
-    author: fsano1@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-04-10 16:51:20'
-    modifiedAt: '2023-04-24 21:27:36'
-    datasets:
-      inputs:
-      - datasets/DS_JDE_01_F4211
-      - datasets/DS_JDE_01_f42119
-      outputs:
-      - datasets/MD_SLS_ORDR_LINE
-    subgraphs: []
-    dependencies: {}
   pipelines/SAP_01_MD_SLS_ORDR_LINE_bba:
     name: SAP_01_MD_SLS_ORDR_LINE_bba
     description: ''
@@ -1701,6 +1684,23 @@ pipelines:
       - datasets/DS_SAP_03_VTTK
       outputs:
       - datasets/MD_SHIP
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_MD_SLS_ORDR_LINE_:
+    name: JDE_01_MD_SLS_ORDR_LINE_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-10 16:51:20'
+    modifiedAt: '2023-04-24 21:27:36'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F4211
+      - datasets/DS_JDE_01_f42119
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
     dependencies: {}
 datasets:
@@ -7308,7 +7308,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-05 13:09:51'
-    modifiedAt: '2023-04-10 13:29:49'
+    modifiedAt: '2023-04-26 20:12:15'
     author: ypatel8@its.jnj.com
   jobs/JOB_MD_DELV_LINE:
     name: JOB_MD_DELV_LINE
@@ -7681,7 +7681,33 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-25 20:42:37'
-    modifiedAt: '2023-04-26 13:27:05'
+    modifiedAt: '2023-04-26 20:24:58'
+    author: smille29@its.jnj.com
+  jobs/HM2_PIPELINE_JOB:
+    name: HM2_PIPELINE_JOB
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 8 ? * 7 *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_MATL_INV
+    - pipelines/SAP_MD_DELV_LINE_HM2
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-26 20:17:30'
+    modifiedAt: '2023-04-26 20:33:45'
     author: smille29@its.jnj.com
 functions:
   author: null
