JEKT-236 (Updated Config and Job) 🔁 Modified     - Pipeline        - SAP_MD_MATL_INV_HMD     - Job        - JOB_MD_MATL_INV_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -387,14 +387,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_MATL_INV:
-    name: SAP_MD_MATL_INV_HM2
-    description: SAP System for MD_MATL_INV 3 Tables HM2
+    name: SAP_MD_MATL_INV_HMD
+    description: SAP System for MD_MATL_INV 3 Tables HMD
     author: ypatel8@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-04-24 19:48:56'
+    modifiedAt: '2023-04-26 21:25:09'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARA
@@ -5516,7 +5516,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-05 13:09:51'
-    modifiedAt: '2023-04-10 13:29:49'
+    modifiedAt: '2023-04-26 21:21:24'
     author: ypatel8@its.jnj.com
   jobs/JOB_MD_DELV_LINE:
     name: JOB_MD_DELV_LINE
@@ -5547,35 +5547,6 @@ jobs:
     createdAt: '2023-04-07 15:21:32'
     modifiedAt: '2023-04-14 12:02:18'
     author: jcovezd1@its.jnj.com
-  jobs/JOB_MD_MATL_INV:
-    name: JOB_MD_MATL_INV
-    description: ''
-    fabricUID: 32
-    scheduler:
-      Databricks: {}
-    cloudProvider: null
-    jobSize: Prophecy_Small
-    scheduleCron: 0 0 0 1/1 * ? *
-    timeout: null
-    alerting:
-      emails: ''
-      onStart: false
-      onSuccess: false
-      onFailure: false
-    pipelines:
-    - pipelines/SAP_MD_MATL_INV_BWI
-    - pipelines/SAP_MD_MATL_INV_MBP
-    - pipelines/SAP_MD_MATL_INV_P01
-    - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
-    - pipelines/JDE_01_MD_MATL_INV
-    jobClusterMode:
-      clusterMode:
-        Single: {}
-      clusterId: null
-    enabled: false
-    createdAt: '2023-04-04 14:54:35'
-    modifiedAt: '2023-04-14 17:49:34'
-    author: natkins7@its.jnj.com
   jobs/JOB_MD_MATL_BOM:
     name: JOB_MD_MATL_BOM
     description: ''
@@ -5739,6 +5710,35 @@ jobs:
     createdAt: '2023-04-10 15:57:31'
     modifiedAt: '2023-04-10 16:03:41'
     author: mbolado1@its.jnj.com
+  jobs/JOB_MD_MATL_INV:
+    name: JOB_MD_MATL_INV
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MATL_INV_BWI
+    - pipelines/SAP_MD_MATL_INV_MBP
+    - pipelines/SAP_MD_MATL_INV_P01
+    - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    - pipelines/JDE_01_MD_MATL_INV
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: false
+    createdAt: '2023-04-04 14:54:35'
+    modifiedAt: '2023-04-14 17:49:34'
+    author: natkins7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
