--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -7522,7 +7522,7 @@ jobs:
     scheduler:
       Databricks: {}
     cloudProvider: null
-    jobSize: Prophecy_Small
+    jobSize: Prophecy_Large
     scheduleCron: 0 0 0 1/1 * ? *
     timeout: null
     alerting:
@@ -7545,9 +7545,9 @@ jobs:
       clusterMode:
         Single: {}
       clusterId: null
-    enabled: null
+    enabled: false
     createdAt: '2023-04-26 17:13:45'
-    modifiedAt: '2023-04-26 18:36:26'
+    modifiedAt: '2023-04-27 05:42:05'
     author: skostadi@its.jnj.com
   jobs/JOB_MD_DELV_LINE:
     name: JOB_MD_DELV_LINE
