JEKT-1210 - add hmd pipeline 🔁 Modified     - Pipeline        - SAP_MD_MATL_MVMT_HDR     - Dataset        - MD_MATL_MVMT_HDR
❇️ New
    - Dataset
       - DS_SAP_MATDOC
       - DS_SAP_T003T
    - Pipeline
       - SAP_MD_MATL_MVMT_HDR_HMD

--- a/src/datasets/MD_MATL_MVMT_HDR/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_MVMT_HDR/pbt_aspects.yml
@@ -23,6 +23,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: EV_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_MVMT_DTTM
     type: timestamp
     nullable: true
@@ -51,7 +58,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DOC_TYPE_DESC
+  - name: BILL_OF_LANDG
     type: string
     nullable: true
     metadata:
@@ -67,42 +74,42 @@ schema:
       tags: []
   - name: SPLT_GUID_PART1
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SPLT_GUID_PART2
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SPLT_GUID_PART3
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SPLT_GUID_PART4
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SPLT_GUID_PART5
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SPLT_GUID_PART6
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -159,6 +166,20 @@ schema:
   - name: _deleted_
     type: string
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_MVMT_ITM_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DOC_TYPE_DESC
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
