JEKT-352 🔁 changed pipeline and package name from hm2 to hmd     - Pipeline        - SAP_MD_DELV_LINE_HMD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -580,14 +580,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_MD_DELV_LINE_HM2:
-    name: SAP_MD_DELV_LINE_HM2
+    name: SAP_MD_DELV_LINE_HMD
     description: ''
     author: jcovezd1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-31 18:26:24'
-    modifiedAt: '2023-04-27 14:52:04'
+    modifiedAt: '2023-04-27 14:55:01'
     datasets:
       inputs:
       - datasets/DS_SAP_01_LIKP
