JEKT-1594 🔁 Modified - Added _deleted_ to Pipeline Jobs in SchemaTransform GEM.  Confirmed all Pipelines included in JOB for Object     - Dataset        - MD_SLS_ORDR_SCHED_LINE_DELV     - Job        - JOB_MD_PO_SCHED_LINE_DELV     - Pipeline        - MD_SLS_ORDR_SCHED_LINE_DELV_10_hm2        - MD_SLS_ORDR_SCHED_LINE_DELV_8_mbp        - MD_SLS_ORDR_SCHED_LINE_DELV_3_geu        - MD_SLS_ORDR_SCHED_LINE_DELV_1_taishan        - MD_SLS_ORDR_SCHED_LINE_DELV_4_hcs_mrs_btb_na_btb_latam_bba        - MD_SLS_ORDR_SCHED_LINE_DELV_9_gmd_bw2_jet_jem_jes_jsw_djd_sjd_mtr_deu        - MD_SLS_ORDR_SCHED_LINE_DELV_7_svs        - MD_SLS_ORDR_SCHED_LINE_DELV_2_p01        - MD_SLS_ORDR_SCHED_LINE_DELV_6_bwi        - MD_SLS_ORDR_SCHED_LINE_DELV_5_atlas_fsn

--- a/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_SCHED_LINE_DELV/pbt_aspects.yml
@@ -59,14 +59,14 @@ schema:
       mappings: []
       tags: []
   - name: RQST_DELV_DTTM
-    type: timestamp
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GI_DTTM
-    type: timestamp
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -87,14 +87,14 @@ schema:
       mappings: []
       tags: []
   - name: DELV_BLK_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_BLK_DESC
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -115,14 +115,14 @@ schema:
       mappings: []
       tags: []
   - name: SCHED_LINE_CAT
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ITM_RLVNT_DELV
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -143,7 +143,7 @@ schema:
       mappings: []
       tags: []
   - name: BASE_UNIT_OF_MEAS
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -157,35 +157,35 @@ schema:
       mappings: []
       tags: []
   - name: REQ_TYPE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PLNG_TYPE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BUSN_DOC_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BUSN_ITM_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SCHED_LINE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -199,42 +199,42 @@ schema:
       mappings: []
       tags: []
   - name: MAINT_RQST
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PRCH_REQSN_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ORDR_TYPE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PRCHSNG_DOC_CAT
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CNFRM_STS_SCHED_LINE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: INVC_RCPT_IN
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -248,7 +248,7 @@ schema:
       mappings: []
       tags: []
   - name: DT_TYPE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -262,21 +262,21 @@ schema:
       mappings: []
       tags: []
   - name: GRP_DEF_STRC_DATA
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RLSE_TYPE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FCST_DELV_SCHED_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -304,84 +304,84 @@ schema:
       mappings: []
       tags: []
   - name: UNIT_MEAS_SIZE_1_TO_3
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FRML_KEY_VAR_SIZE_ITM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: NUMRTR_CONV_SLS_QTY_INTO_SKU
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DENOM_CONV_SLS_QTY_INTO_SKU
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: AVLBLTY_CNFRM_AUTMT
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MVMT_TYPE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ITM_NUM_PRCH_REQSN
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SCHED_LINE_TYPE_EDI
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ORDR_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PLAN_ORDR
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BOM_EXPLS_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CUST_ENGR_CHG_STS
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -395,7 +395,7 @@ schema:
       mappings: []
       tags: []
   - name: RTE_SCHED
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -606,6 +606,13 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: false
     metadata:
       description: ''
