--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -600,14 +600,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_BILL_DOC_HDR:
-    name: SAP_MD_BILL_DOC_HDR_HM2
+    name: SAP_MD_BILL_DOC_HDR_HMD
     description: ''
     author: jcovezd1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-17 19:02:14'
-    modifiedAt: '2023-04-27 15:25:19'
+    modifiedAt: '2023-04-27 15:27:33'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TSPAT
