JEKT-1395 ❇️ New     - Pipeline        - JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1703,6 +1703,20 @@ pipelines:
       - datasets/MD_SHIP
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES:
+    name: JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    description: ''
+    author: lsorarra@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-27 15:31:54'
+    modifiedAt: '2023-04-27 15:32:20'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
